--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -182,7 +182,7 @@
     <p>
       Lexify Legal Group provides expert legal services specializing in corporate law, litigation, and advisory services. Our portfolio work included website design, brand positioning, and digital campaigns aimed at building credibility and increasing inquiries. SEO and social media strategies effectively connected Lexify with clients. The results included stronger online reputation, higher engagement, and brand authority.
     </p>
-    <a href="https://lexify.com" class="visit-btn" target="_blank">Visit Website</a>
+    <a href="https://mindsofbrands.com/portfolio/betterhalf.ai/" class="visit-btn" target="_blank">Learn More</a>
     <div class="gallery">
       <img src="https://via.placeholder.com/400x300?text=Lexify+1" alt="Lexify Image 1">
       <img src="https://via.placeholder.com/400x300?text=Lexify+2" alt="Lexify Image 2">
