--- a/portfolio/scribd/index.html
+++ b/portfolio/scribd/index.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scribd Audio Ebooks | Minds Of Brands</title>
+  <link rel="icon" type="image/png" href="/assets/images/logo.png">
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body>
 
+  <!-- Header -->
+  <header class="header">
+    <div class="container">
+      <div class="logo">
+        <a href="https://mindsofbrands.com/">Minds Of Brands</a>
+      </div>
+      <nav class="nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about/">About</a></li>
+          <li><a href="/services/">Services</a></li>
+          <li><a href="/portfolio/">Portfolio</a></li>
+          <li><a href="/blog/">Blog</a></li>
+          <li><a href="/contact/">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="container">
+      <h1>Scribd Audio Ebooks — SEO Growth Case Study</h1>
+      <p>Ranking Fiction and Business Audiobooks on Google’s Top Search Results</p>
+    </div>
+  </section>
+
+  <!-- Case Study Details -->
+  <section class="case-study">
+    <div class="container">
+      <h2>Project Overview</h2>
+      <p>
+        Scribd wanted to improve the visibility and search ranking of its Fiction and Business audiobooks within just <strong>2 months</strong>. 
+        Our goal was to make Scribd’s audiobook listings dominate the top results for high-intent keywords on Google Search.
+      </p>
+
+      <h2>Our Strategy</h2>
+      <ul>
+        <li>Performed detailed keyword research for Fiction and Business audiobook niches.</li>
+        <li>Optimized audiobook titles, meta descriptions, and structured data for Google indexing.</li>
+        <li>Created engaging content snippets for better SERP click-through rates.</li>
+        <li>Built high-quality backlinks through book review blogs and audio content networks.</li>
+        <li>Integrated schema for “Audiobook” and “Author” to boost visibility in search features.</li>
+      </ul>
+
+      <h2>Execution Timeline</h2>
+      <ul>
+        <li><strong>Week 1:</strong> SEO audit, keyword gap analysis, and on-page optimization setup.</li>
+        <li><strong>Week 2–4:</strong> Content updates, backlink acquisition, and technical SEO fixes.</li>
+        <li><strong>Week 5–8:</strong> Monitoring keyword movements and continuous optimization.</li>
+      </ul>
+
+      <h2>Results Achieved</h2>
+      <ul class="metrics">
+        <li><strong>+120%</strong> increase in organic visibility in 2 months.</li>
+        <li><strong>Top 3</strong> Google rankings for 10+ high-volume ebook keywords.</li>
+        <li><strong>60%</strong> higher click-through rate on targeted audiobook listings.</li>
+        <li><strong>35%</strong> growth in paid and organic subscription conversions.</li>
+      </ul>
+
+      <h2>Key Takeaway</h2>
+      <p>
+        Within a short timeframe, Scribd’s audiobook catalog became more discoverable and engaging for users searching for specific genres like Fiction and Business audiobooks — solidifying Scribd’s dominance in the audio reading market.
+      </p>
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <section class="cta">
+    <div class="container">
+      <h2>Want Results Like Scribd?</h2>
+      <p>Let’s elevate your digital presence with data-driven SEO strategies that deliver measurable impact.</p>
+      <a href="/contact/" class="btn">Let’s Collaborate</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <a href="https://mindsofbrands.com/">Minds Of Brands</a>
+        </div>
+        <div class="footer-nav">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/services/">Services</a></li>
+            <li><a href="/portfolio/">Portfolio</a></li>
+            <li><a href="/blog/">Blog</a></li>
+            <li><a href="/contact/">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-copy">
+          <p>© 2025 Minds Of Brands. All Rights Reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+</body>
+</html>
